[gd_scene load_steps=7 format=3 uid="uid://bhq56l6tcca0m"]

[ext_resource type="Script" path="res://scene/world.gd" id="1_fdfpf"]
[ext_resource type="PackedScene" uid="uid://dn13icmjtjbuu" path="res://scene/cell.tscn" id="2_wgcke"]

[sub_resource type="Gradient" id="Gradient_xxxum"]
colors = PackedColorArray(0.907731, 0.000241231, 0.800454, 1, 0.830335, 0.830335, 0.830335, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_85sv7"]
noise_type = 2
seed = 1
frequency = 0.0203
cellular_distance_function = 2
cellular_jitter = 0.9
cellular_return_type = 0
metadata/_preview_in_3d_space_ = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_brwej"]
color_ramp = SubResource("Gradient_xxxum")
noise = SubResource("FastNoiseLite_85sv7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37c45"]
size = Vector2(41.5, 862)

[node name="World" type="Node2D"]
script = ExtResource("1_fdfpf")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1151.0
offset_bottom = 647.0
texture = SubResource("NoiseTexture2D_brwej")

[node name="cell" parent="." instance=ExtResource("2_wgcke")]
position = Vector2(269, 327)

[node name="Viruses" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1210, 321)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, -2)
shape = SubResource("RectangleShape2D_37c45")

[node name="VirusSpawn" type="Timer" parent="."]

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Score: 0"

[connection signal="timeout" from="VirusSpawn" to="." method="_on_virus_spawn_timeout"]
